# contributor-onboarding

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs-publish.yml  python-publish.yml  python-publish.yml.disabled
docs/: index.md
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
resources/github-basics/: github-basics.md  index.html
search/: search_index.json
src/: __init__.py  utils.py
tests/: Modulus test.py  test_modulo.py  test_multiply.py
